--- a/marmot/HTML_out.Rmd
+++ b/marmot/HTML_out.Rmd
@@ -34,7 +34,7 @@ Multi_Scenario = as.character(inputs[Input == 'Multi_Scenario']$User_defined_val
 agg_level = as.character(inputs[Input == 'AGG_BY']$User_defined_value)
 plot_dev = as.character(inputs[Input == 'Figure_Format']$User_defined_value)
 
-agg_levels = c('Summary','Usual', 'Usual_and_RTOZone')
+agg_levels = c('Summary','Usual','Usual_and_RTOZone')
 
 sections = c('_total_generation',
              #'_total_generation',
@@ -68,7 +68,7 @@ for (section_name in names(sections)){
                    pattern = plot_dev,full.name = T,recursive = T,all.files = T))
   }
   diff.plots = all.plots[grepl('Diff',all.plots)]
-  if(!is_empty(diff.plots)){
+  if(!is_empty(diff.plots)){-
   abs.plots = all.plots[-which(all.plots == diff.plots)]
   } else {
     abs.plots = all.plots
