--- a/marmot/HTML_out.Rmd
+++ b/marmot/HTML_out.Rmd
@@ -55,13 +55,14 @@ names(sections) = c('Total Generation',
                     )
 
 # set up default options for chunks, turn off error or warning messages
-knitr::opts_chunk$set(echo=F, comment=NA, warning=F, message=F, include=T,dev='svg', cache = F, fig.width = 20,results = 'asis',out.width = "100%", fig.asp = 0.675)
+knitr::opts_chunk$set(echo=T, comment=NA, warning=T, message=T, include=T,dev='svg', cache = F, fig.width = 20,results = 'asis',out.width = "100%", fig.asp = 0.675)
 
 ```
 
 
 ```{r}
 print(parent_dir)
+print('hi')
 print(scenario_dir)
 for (section_name in names(sections)){
   pandoc.header(section_name)
