--- a/marmot/HTML_out.Rmd
+++ b/marmot/HTML_out.Rmd
@@ -30,10 +30,11 @@ pacman::p_load(ggplot2, data.table, maptools, mapproj, RColorBrewer,tidyverse,ma
 #Read in file locations
 inputs = fread('Marmot_user_defined_inputs.csv', header = T)
 parent_dir = as.character(inputs[Input == 'Marmot_Solutions_folder']$User_defined_value)
-scenario_dir = as.character(inputs[Input == 'Main_scenario_plot']$User_defined_value)
-Multi_Scenario = as.character(inputs[Input == 'Multi_Scenario']$User_defined_value)
+#scenario_dir = as.character(inputs[Input == 'Main_scenario_plot']$User_defined_value)
+scenario_dir = as.character(inputs[Input == 'Scenarios']$User_defined_value)
+#Multi_Scenario = as.character(inputs[Input == 'Multi_Scenario']$User_defined_value)
 agg_level = as.character(inputs[Input == 'AGG_BY']$User_defined_value)
-plot_dev = as.character(inputs[Input == 'Figure_Format']$User_defined_value)
+plot_dev = "svg"#as.character(inputs[Input == 'Figure_Format']$User_defined_value)
 
 agg_levels = c('Summary','Usual','Usual_and_RTOZone')
 
@@ -56,14 +57,13 @@ names(sections) = c('Total Generation',
 
 # set up default options for chunks, turn off error or warning messages
 knitr::opts_chunk$set(echo=F, comment=NA, warning=F, message=F, include=T,dev='svg', cache = F, fig.width = 20,results = 'asis',out.width = "100%", fig.asp = 0.675)
-
+print(parent_dir)
+print('hi')
+print(scenario_dir)
 ```
 
 
 ```{r}
-print(parent_dir)
-print('hi')
-print(scenario_dir)
 for (section_name in names(sections)){
   pandoc.header(section_name)
   all.plots = c()
