--- a/marmot/HTML_out.Rmd
+++ b/marmot/HTML_out.Rmd
@@ -63,7 +63,7 @@ print(scenario_dir)
 ```
 
 
-```{r}
+```{r, echo = TRUE, warning = TRUE, message = TRUE, error = FALSE}
 for (section_name in names(sections)){
   pandoc.header(section_name)
   all.plots = c()
@@ -71,6 +71,7 @@ for (section_name in names(sections)){
   all.plots = c(all.plots,list.files(file.path(parent_dir,scenario_dir,'Figures_Output',paste0(agg_level,sections[section_name])),
                    pattern = plot_dev,full.name = T,recursive = T,all.files = T))
   }
+  print(all.plots)
   diff.plots = all.plots[grepl('Diff',all.plots)]
   if(!is_empty(diff.plots)){-
   abs.plots = all.plots[-which(all.plots == diff.plots)]
