--- a/marmot/HTML_out.Rmd
+++ b/marmot/HTML_out.Rmd
@@ -34,7 +34,7 @@ parent_dir = as.character(inputs[Input == 'Marmot_Solutions_folder']$User_define
 scenario_dir = as.character(inputs[Input == 'Scenarios']$User_defined_value)
 #Multi_Scenario = as.character(inputs[Input == 'Multi_Scenario']$User_defined_value)
 agg_level = as.character(inputs[Input == 'AGG_BY']$User_defined_value)
-plot_dev = ".svg"#as.character(inputs[Input == 'Figure_Format']$User_defined_value)
+plot_dev = "svg"#as.character(inputs[Input == 'Figure_Format']$User_defined_value)
 
 agg_levels = c('Summary','Usual','Usual_and_RTOZone')
 
@@ -68,6 +68,7 @@ for (section_name in names(sections)){
   all.plots = c()
   for (agg_level in agg_levels){
   print(file.path(parent_dir,scenario_dir,'Figures_Output',paste0(agg_level,sections[section_name])))
+  print(list.files(file.path(parent_dir,scenario_dir,'Figures_Output',paste0(agg_level,sections[section_name]))))
   all.plots = c(all.plots,list.files(file.path(parent_dir,scenario_dir,'Figures_Output',paste0(agg_level,sections[section_name])),
                    pattern = plot_dev,full.name = T,recursive = T,all.files = T))
   }
